# ledger-formatter

./: Cargo.toml  README.md  flake.nix
.github/workflows/: package.yml
app/: Cargo.toml  build.rs
app/src/: main.rs
lib/: Cargo.toml
lib/src/: args.rs  beautifier.rs
