[package]
name = "ledger-beautifier"
version = "1.0.0"
edition = "2021"
license = "MPL-2.0"
authors = ["Álan Crístoffer <alan@esousa.me>"]
description = "A beautifier for ledger files"

[dependencies]
ledger_beautifier = { path = "../lib" }
anyhow = "1.0.99"
chardetng = "0.1.17"
clap = { version = "4.5.45", features = ["derive", "env"] }
colored = "3.0.0"
encoding_rs = "0.8.35"

[build-dependencies]
clap = { version = "4.5.45", features = ["derive", "env"] }
clap_complete = "4.5.57"
clap_mangen = "0.2.29"
fs_extra = "1.3.0"

[[bin]]
name = "ledger-beautifier"
path = "src/main.rs"

[package.metadata.deb]
section = "utils"
depends = "$auto"
extended-description = "A beautifier for ledger files"
assets = [
    ["target/release/ledger-beautifier", "usr/bin/", "755"],
    ["target/release/share/man/man1/ledger-beautifier.1", "usr/share/man/man1/", "644"],
    ["target/release/share/bash/completions/ledger-beautifier.bash", "usr/share/bash-completion/completions/ledger-beautifier", "644"],
    ["target/release/share/fish/completions/ledger-beautifier.fish", "usr/share/fish/vendor_completions.d/", "644"],
    ["target/release/share/zsh/completions/_ledger-beautifier", "usr/share/zsh/vendor-completions/", "644"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/ledger-beautifier", dest = "/usr/bin/ledger-beautifier", mode = "755" },
    { source = "target/release/share/man/man1/ledger-beautifier.1", dest = "/usr/share/man/man1/ledger-beautifier.1", mode = "644", doc = true },
    { source = "target/release/share/bash/completions/ledger-beautifier.bash", dest = "/usr/share/bash-completion/completions/ledger-beautifier", mode = "644" },
    { source = "target/release/share/fish/completions/ledger-beautifier.fish", dest = "/usr/share/fish/vendor_completions.d/ledger-beautifier.fish", mode = "644" },
    { source = "target/release/share/zsh/completions/_ledger-beautifier", dest = "/usr/share/zsh/site-functions/_ledger-beautifier", mode = "644" },
]
