[package]
name = "ledger_beautifier"
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.18", features = ["derive", "env"] }
tree-sitter = ">=0.20.7"
tree-sitter-ledger = { git = "https://github.com/acristoffers/tree-sitter-ledger" }

[build-dependencies]
cc = "1.0"

[lib]
name = "ledger_beautifier"
path = "src/lib.rs"
