[package]
name = "ledger_beautifier"
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.45", features = ["derive", "env"] }
tree-sitter = ">=0.20.7"
tree-sitter-ledger = { git = "https://github.com/acristoffers/tree-sitter-ledger" }
unicode-segmentation = "1.12.0"

[build-dependencies]
cc = "1.2"

[lib]
name = "ledger_beautifier"
path = "src/lib.rs"
